# EasyOCR

./: .gitignore  Cargo.toml  Pipfile  WIP.md  export_onnx.py
easyocr/: __init__.py  cli.py  config.py  craft_utils.py  detection.py  detection_db.py  easyocr.py  export.py  recognition.py  utils.py
easyocr/DBNet/: DBNet.py
easyocr/DBNet/assets/ops/dcn/: __init__.py  setup.py
easyocr/DBNet/assets/ops/dcn/functions/: deform_conv.py  deform_pool.py
easyocr/DBNet/assets/ops/dcn/modules/: deform_conv.py  deform_pool.py
easyocr/DBNet/backbones/: __init__.py  mobilenetv3.py  resnet.py
easyocr/DBNet/decoders/: balance_cross_entropy_loss.py  dice_loss.py  feature_attention.py  l1_loss.py  pss_loss.py  seg_detector.py  seg_detector_asf.py  seg_detector_loss.py  simple_detection.py
easyocr/DBNet/model/: constructor.py  detector.py  model.py
easyocr/model/: modules.py
easyocr/scripts/: compile_dbnet_dcn.py
src/: main.rs
trainer/craft/: .gitignore  eval.py  train.py  trainSynth.py  train_distributed.py
trainer/craft/config/: load_config.py  syn_train.yaml
trainer/craft/data/: boxEnlarge.py  dataset.py  gaussian.py
trainer/craft/data/pseudo_label/: make_charbox.py  watershed.py
trainer/craft/loss/: mseloss.py
trainer/craft/metrics/: eval_det_iou.py
trainer/craft/model/: craft.py  vgg16_bn.py
trainer/craft/utils/: craft_utils.py  inference_boxes.py  util.py
